--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,41 @@
   }
 }
 
+.white{
+  color: white!important;
+}
+
+.text-right{
+  text-align: right!important;
+}
+
+.bolder{
+  font-weight: bold;
+}
+
+.m-t-5{
+  margin-top: 5px!important;
+}
+
+.m-t-20{
+  margin-top: 20px!important;
+}
+
+.m-t-10{
+  margin-top: 10px!important;
+}
+
+.m-l-5{
+  margin-left: 5px;
+}
+
+.box-dash{
+  padding: 10px;
+  border-radius: 15px;
+  background-color: #607D8B;
+  color: white;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
